--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8443
-server.ssl.key-store=classpath:client.p12
+server.ssl.key-store=classpath:keystore.p12
 server.ssl.key-store-password=slawek1
 server.ssl.keyStoreType=PKCS12
 server.ssl.keyAlias=tomcat
@@ -7,3 +7,7 @@ server.ssl.keyAlias=tomcat
 security.basic.enabled=false
 security.user.password=slawek1
 security.user.name=przodownik
+
+spring.profiles.active=dev
+spring.thymeleaf.cache: false
+#spring.thymeleaf.mode=LEGACYHTML5
