--- a/build.gradle
+++ b/build.gradle
@@ -30,8 +30,8 @@ ext {
     springVersion = '4.2.1.RELEASE'
      hibernateVersion = "5.0.2.Final"
      javaxValidationVersion = "1.1.0.Final"
-     hibernateValidatorVersion = "5.0.3.Final"
      lombokVersion = "1.16.4"
+     hibernateValidatorVersion = "5.1.1.Final"
 }
 
 dependencies {
@@ -42,7 +42,7 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-security')
     compile('org.springframework.boot:spring-boot-starter-thymeleaf')
     compile('org.springframework.boot:spring-boot-starter-web')
-    runtime('com.h2database:h2')
+    compile('com.h2database:h2')
     compile 'org.projectlombok:lombok:1.16.6'
     compile 'com.google.guava:guava:18.0'
     compile 'org.webjars:bootstrap:3.3.5'
@@ -53,6 +53,11 @@ dependencies {
         exclude group: 'org.webjars.bower'
     }
    
+    compile ("javax.validation:validation-api:${javaxValidationVersion}")
+    compile ("org.hibernate:hibernate-validator:${hibernateValidatorVersion}")
+    compile ("javax.el:el-api:2.2")
+    compile ("org.glassfish.web:el-impl:2.2")
+    
     testCompile 'junit:junit:4.12'
     testCompile 'org.assertj:assertj-core:3.2.0'
     testCompile 'com.jayway.awaitility:awaitility-java8:1.6.1'
@@ -61,7 +66,20 @@ dependencies {
     
     testCompile('org.springframework.boot:spring-boot-starter-test') 
 }
+configurations {
+    all*.exclude group: "commons-logging", module: "commons-logging"
+}
 
+configurations.all {
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        if (details.requested.group == 'org.springframework') {
+            details.useVersion '4.2.2.RELEASE'
+        }
+        if (details.requested.group == 'org.hibernate') {
+            details.useVersion '5.0.2.Final'
+        }
+    }
+}
 
 
 task wrapper(type: Wrapper) {
