sample thymeleaf and simple secure config added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,24 @@ server.ssl.key-store-password=slawek1
 server.ssl.keyStoreType=PKCS12
 server.ssl.keyAlias=tomcat
 
-security.basic.enabled=false
-security.user.password=slawek1
-security.user.name=przodownik
+#security.basic.enabled=true
+#security.user.password=slawek1
+#security.user.name=przodownik
+
+
+
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.initialize=false
+spring.datasource.jmx-enabled=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+
 
 spring.profiles.active=dev
 spring.thymeleaf.cache: false
