--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ repositories {
 }
 ext {
     springDataVersion = 'Fowler-RELEASE'
-    springVersion = '4.2.1.RELEASE'
+    springVersion = '4.2.3.RELEASE'
      hibernateVersion = "5.0.2.Final"
      javaxValidationVersion = "1.1.0.Final"
      lombokVersion = "1.16.4"
@@ -40,6 +40,7 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-jdbc')
     compile 'org.springframework.boot:spring-boot-starter-logging'
     compile('org.springframework.boot:spring-boot-starter-security')
+    compile 'org.springframework.security:spring-security-ldap:3.2.8.RELEASE'
     compile('org.springframework.boot:spring-boot-starter-thymeleaf')
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('com.h2database:h2')
@@ -75,6 +76,11 @@ configurations.all {
         if (details.requested.group == 'org.springframework') {
             details.useVersion '4.2.2.RELEASE'
         }
+        
+        if (details.requested.group == 'org.springframework.security') {
+            details.useVersion '4.0.3.RELEASE'
+        }
+        
         if (details.requested.group == 'org.hibernate') {
             details.useVersion '5.0.2.Final'
         }
